fixes spacing issues between panels

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   will-change: transform;
+  /* border: red 5px dotted; */
 }
 
 .page > div {
@@ -10,10 +11,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  /* width: 100%;
+  height: 100%; */
   will-change: transform;
   box-shadow: 0 62.5px 125px -25px rgba(50, 50, 73, 0.5), 0 37.5px 75px -37.5px rgba(0, 0, 0, 0.6);
+  /* border: blue 5px dotted; */
 }
 
 .container {
@@ -21,9 +25,11 @@
   align-items: center;
   height: 100%;
   justify-content: center;
+  /* border: rgb(0, 255, 81) 5px dotted; */
 }
 
 .wrapper {
   width: 100%;
   height: 100%;
+  /* border: rgb(255, 0, 230) 5px dotted; */
 }
